[gd_scene load_steps=2 format=3 uid="uid://hr5eq3xc3vdg"]

[ext_resource type="Script" path="res://addons/property_panel/float_slider/float_slider.gd" id="1"]

[node name="FloatSlider" type="LineEdit"]
offset_right = 58.0
offset_bottom = 24.0
mouse_filter = 2
script = ExtResource("1")
value = 0.051
min_value = 0.211

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="text_submitted" from="." to="." method="_on_text_entered"]
